[package]
name = "otp-rs"
version = "0.1.0"
description = "RFC-complaint one-time password algorithms written in Rust"
keywords = ["otp", "one-time-password", "rust"]
authors = ["Russell Wong"]
homepage = "https://github.com/russellwmy/otp-rs"
repository = "https://github.com/russellwmy/otp-rs"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0"
hmac = "0.11"
sha-1 = "0.9.8"
data-encoding = "2.3.2"
